tests/e2e/fail/pop_non_array.ep
# COMPILE_ERROR: pop expects an array, got i64
fun main(): void {
    let value = pop(42)
    print(itoa(value))
}
